...
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/satellite" />

            <Spinner
                android:id="@+id/satHeard"
                android:layout_width="409dp"
                android:layout_height="wrap_content"
                android:entries="@array/satellite_names"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/uplink_and_downlink_active" />

                <RadioButton
                    android:id="@+id/telemetryOnlyRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/downlink_only" />

                <RadioButton
                    android:id="@+id/notHeardRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/not_heard" />

                <RadioButton
                    android:id="@+id/crewActiveRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/iss_crew_voice_active" />
            </RadioGroup>

            <DatePicker
                android:id="@+id/date_fixture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/time_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/utc" />

            <TimePicker
                android:id="@+id/time_fixture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:timePickerMode="spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/callsign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:hint="@string/callsign"
                android:inputType="textCapCharacters" />

            <EditText
                android:id="@+id/gridsquare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/grid"
                android:importantForAutofill="no"
                android:inputType="textCapCharacters" />

            <ImageButton
                android:id="@+id/location_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/find_my_grid_square"
                android:src="@android:drawable/ic_menu_mylocation" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit_report" />
        </LinearLayout>
    </ScrollView>

...
