<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/defaults_header">
        <EditTextPreference
            app:key="@string/preference_callsign"
            app:title="@string/callsign"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="@string/preference_default_grid"
            app:title="@string/grid"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="DEMO-1"
            android:entries="@array/satellite_names"
            android:entryValues="@array/satellite_ids"
            android:icon="@drawable/ic_launcher_foreground"
            android:key="@string/preference_satellite"
            android:summary="Default satellite to report/show"
            android:title="@string/satellite" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/display_header">
        <SwitchPreferenceCompat
            app:key="@string/preference_local_time"
            app:summaryOff="@string/use_local_time_off"
            app:summaryOn="@string/use_local_time_on"
            app:title="@string/use_local_time" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/title_analytics">
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/preference_enable_analytics"
            app:title="@string/title_anonymous_usage" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/preference_enable_crash_reports"
            app:title="@string/title_crash_reports" />
    </PreferenceCategory>
</PreferenceScreen>
